Use the URL passed to navigator.share().

BUG=644034

Review-Url: https://codereview.chromium.org/2309403002
Cr-Commit-Position: refs/heads/master@{#417452}

Former-commit-id: 746afbd5808e9daa0333e66a7608e0d98283a9c8