third_party/WebKit/Source/modules/webshare/NavigatorShare.cpp
@@ -101,8 +101,11 @@ ScriptPromise NavigatorShare::share(ScriptState* scriptState, const ShareData& s
     m_clients.add(client);
     ScriptPromise promise = resolver->promise();
 
-    // TODO(sammc): Use shareData.url().
-    m_service->Share(shareData.hasTitle() ? shareData.title() : emptyString(), shareData.hasText() ? shareData.text() : emptyString(), convertToBaseCallback(WTF::bind(&ShareClientImpl::callback, wrapPersistent(client))));
+    m_service->Share(
+        shareData.hasTitle() ? shareData.title() : emptyString(),
+        shareData.hasText() ? shareData.text() : emptyString(),
+        doc->completeURL(shareData.url()),
+        convertToBaseCallback(WTF::bind(&ShareClientImpl::callback, wrapPersistent(client))));
 
     return promise;
 }
