third_party/WebKit/LayoutTests/webshare/resources/mock-share-service.js
@@ -28,7 +28,7 @@ let mockShareService = loadMojoModules(
       this.router_.setIncomingReceiver(this);
     }
 
-    share(title, text) {
+    share(title, text, url) {
       let callback = null;
       let result = new Promise(resolve => {callback = resolve;});
 
@@ -37,11 +37,12 @@ let mockShareService = loadMojoModules(
         return result;
       }
 
-      let expectedTitle, expectedText, error;
-      [expectedTitle, expectedText, error] = this.shareResultQueue_.shift();
+      let [expectedTitle, expectedText, expectedUrl, error] =
+          this.shareResultQueue_.shift();
       try {
         assert_equals(title, expectedTitle);
         assert_equals(text, expectedText);
+        assert_equals(url.url, expectedUrl);
       } catch (e) {
         this.reject_(e);
         return result;
@@ -51,8 +52,9 @@ let mockShareService = loadMojoModules(
       return result;
     }
 
-    pushShareResult(expectedTitle, expectedText, result) {
-      this.shareResultQueue_.push([expectedTitle, expectedText, result]);
+    pushShareResult(expectedTitle, expectedText, expectedUrl, result) {
+      this.shareResultQueue_.push(
+          [expectedTitle, expectedText, expectedUrl, result]);
     }
   }
   return new MockShareService(mojo.frameInterfaces);
